sonarcube related refactor